[DP][DDCE-1224] Fix menu toggle on small screen issue

--- a/app/assets/stylesheets/lisa-app.scss
+++ b/app/assets/stylesheets/lisa-app.scss
@@ -32,7 +32,7 @@
 }
 
 .error-summary--show:focus {
-    outline: 3px solid #ffbf47;
+    outline: 3px solid #ffdd00;
 }
 
 .form-control {
@@ -56,4 +56,18 @@ p.indent {
 
 #whyGiveThisRating {
     min-height: 150px;
+}
+
+#global-header .header-proposition a.menu {
+    display: none;
+}
+.js-enabled #global-header .header-proposition #proposition-links {
+    display: block;
+}
+
+input:focus {
+    outline: 3px solid #ffdd00;
+    outline-offset: 0;
+    -webkit-box-shadow: inset 0 0 0 2px;
+    box-shadow: inset 0 0 0 2px;
 }
